fix: numeri divisibili per 3 e 5

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,6 @@ h1{
     background-color: lightpink;
 }
 
-.divisible15{
+.divisible35{
     background-color: lightcoral;
 }
